--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+	font-size: 10px;
+}
+
 body {
 	background-color: #72c7cc;
 	font-family: sans-serif;
@@ -24,6 +28,7 @@ body {
 	background:rgba(0,0,0,0.4);
 	text-shadow: 0 0 5px black;
 	width: 100px;
+	transition: all 0.07s;
 }
 
 kbd {
